--- a/app/components/events/events/events_table/events_table.scss
+++ b/app/components/events/events/events_table/events_table.scss
@@ -1,4 +1,15 @@
 .events--table {
 	margin-top: 1em;
 	margin-bottom: 1em;
+
+	&__header {
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    border-bottom: 1px solid;
+    padding: .25em 1em;
+	}
+	.th, .td {
+		width: 15%;
+	}
 }
