--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -4,6 +4,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
   font-size: 16px;
+  background-color: blue;
 }
 
 .responsive-container {
