--- a/public/style.css
+++ b/public/style.css
@@ -56,7 +56,8 @@ h5, .h5 {
 body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
-  font-size: 16px; }
+  font-size: 16px;
+  background-color: antiquewhite; }
 
 .responsive-container {
   padding: 0 1em; }
